fix: empty notifications config check